--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,14 +3,14 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<div class="jumbotron">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 offset-sm-3">
+<div>
+    <!-- <div class="container">
+        <div class="row"> -->
+            <!-- <div class="col-sm-6 offset-sm-3"> -->
                 <alert></alert>
                 <router-outlet></router-outlet>
-            </div>
-        </div>
-    </div>
+            <!-- </div>
+        </div> -->
+    <!-- </div> -->
 </div>
 
