--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,5 +1,6 @@
+<div class="col-sm-6 offset-sm-3">
 <div class="container login-container login-form-2">
-<h2>SWM Login</h2>
+<h2>SWM</h2>
 
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -19,9 +20,10 @@
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">Login</button>
        
-         <a [routerLink]="['/register']" class="btn btn-link">Register</a> 
+         <!-- <a [routerLink]="['/register']" class="btn btn-link">Register</a>  -->
     </div>
 </form>
+</div>
 </div>
 
 
