--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,12 +1,43 @@
- <div class="fixed-header">
+ <div class="fixed-header" style="background-color: #0062cc;
+    border-color: #007bff;">
         <div class="container">
             <nav>
                 <a href="#">SWM</a>
                 <a [routerLink]="['/login']" style="float:right;">Logout</a>
             </nav>
-          
         </div>
     </div>
+    
+<div class="container" style="padding-top:70px;">
+    
+    <div class="form-group col-md-5">
+        <label for="id">Item Id</label>
+        <input type="text"  class="form-control"  />
+    </div>
+    <div class="form-group col-md-5">
+        <label for="Number">Item Number</label>
+        <input type="text"  class="form-control"  />
+    </div>
+     <div class="form-group col-md-5">
+        <label for="Name">Item Name</label>
+        <input type="text"  class="form-control"  />
+    </div>
+     <div class="form-group col-md-5">
+        <label for="Description">Item Description</label>
+        <input type="text"  class="form-control"  />
+    </div>
+     <div class="form-group col-md-5">
+        <label for="Attachement">Attachement</label>
+        <input type="file" class="form-control"  />
+    </div>
+    <div class="form-group">
+        <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Priv</button>
+          <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Submit</button>
+            <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Next</button>
+            
+         <!-- <a [routerLink]="['/register']" class="btn btn-link">Register</a>  -->
+    </div>
+</div>
 
 <style>
     /* Add some padding on document's body to prevent the content
