--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">Login</button>
+        <button [disabled]="loading" class="btn btn-default">Login</button>
        
          <!-- <a [routerLink]="['/register']" class="btn btn-link">Register</a>  -->
     </div>
