--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -9,34 +9,68 @@
     </div>
     
 <div class="container" style="padding-top:70px;">
-    
-    <div class="form-group col-md-5">
+    <div class="form-group">
+      <div class="row">
+    <div class="col-md-5">
         <label for="id">Item Id</label>
         <input type="text"  class="form-control"  />
     </div>
-    <div class="form-group col-md-5">
+    <div class="col-md-5">
         <label for="Number">Item Number</label>
         <input type="text"  class="form-control"  />
     </div>
-     <div class="form-group col-md-5">
-        <label for="Name">Item Name</label>
+    </div>
+</div>
+
+<div class="form-group">
+      <div class="row">
+    <div class="col-md-5">
+         <label for="Name">Item Name</label>
         <input type="text"  class="form-control"  />
     </div>
-     <div class="form-group col-md-5">
-        <label for="Description">Item Description</label>
+    <div class="col-md-5">
+       <label for="Description">Item Description</label>
         <input type="text"  class="form-control"  />
     </div>
-     <div class="form-group col-md-5">
-        <label for="Attachement">Attachement</label>
+    </div>
+</div>
+
+    <div class="form-group">
+      <div class="row">
+    <div class="col-md-5">
+             <label for="Attachement">Attachement</label>
         <input type="file" class="form-control"  />
     </div>
-    <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Priv</button>
-          <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Submit</button>
-            <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Next</button>
-            
-         <!-- <a [routerLink]="['/register']" class="btn btn-link">Register</a>  -->
+    <div class="col-md-5">
+      
     </div>
+    </div>
+    </div>
+   
+    <div class="form-group">
+      <div class="row">
+    
+    <div class="col-md-2">
+      <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Priv</button>
+           
+    </div>
+
+    <div class="col-md-2">
+    </div>
+    
+    <div class="col-md-4">
+      <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Submit</button>
+      
+    </div>
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-3">
+      <button [disabled]="loading" class="btn btn-primary" style="margin-right:20px;"> Next</button>
+      
+    </div>
+    </div>
+    </div>
+   
 </div>
 
 <style>
