--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -20,7 +20,7 @@
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-default">Login</button>
        
-         <!-- <a [routerLink]="['/register']" class="btn btn-link">Register</a>  -->
+         <a [routerLink]="['/register']" class="btn btn-link">Register</a> 
     </div>
 </form>
 </div>
